<resources>
    <string name="app_name">GPA_JamesNicklaus_Calculator</string>
    <string name="grade1">Grade 1:</string>
    <string name="EntryHeader">Please enter your grades:</string>
    <string name="grade2">Grade 2:</string>
    <string name="grade3">Grade 3:</string>
    <string name="grade4">Grade 4:</string>
    <string name="grade5">Grade 5:</string>
    <string name="EntryHint">0–100</string>
    <string name="calculate_gpa">Calculate GPA</string>
    <string name="ClearForm">Clear Form</string>


</resources>